--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
     "license": "Apache-2.0",
     "autoload": {
         "psr-4": {
-            "Wolfcode\\PhpAi\\": "src/"
+            "Wolfcode\\Ai\\": "src/"
         }
     },
     "authors": [
